// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeatTooltip should match snapshot when has children 1`] = `
<div
  className="czYnrP"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "260px",
    }
  }
>
  <div
    className="lhXVsc"
    size="large"
  >
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Sec
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        B
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Row
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Seat
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="iqmoJs"
    size="large"
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when no children and dark 1`] = `
<div
  className="czYnrP"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "260px",
    }
  }
>
  <div
    className="dfaaHe"
    size="large"
  >
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Sec
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Row
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="kfPKLw"
        size="large"
      >
        Seat
      </div>
      <div
        className="bBhPFb"
        size="large"
      >
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when small and dark 1`] = `
<div
  className="dQyfME"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "180px",
    }
  }
>
  <div
    className="hEygZE"
    size="small"
  >
    <div
      className="bgQDpY"
    >
      <div
        className="dbJpml"
        size="small"
      >
        Sec
      </div>
      <div
        className="eouheV"
        size="small"
      >
        B
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="dbJpml"
        size="small"
      >
        Row
      </div>
      <div
        className="eouheV"
        size="small"
      >
        5
      </div>
    </div>
    <div
      className="bgQDpY"
    >
      <div
        className="dbJpml"
        size="small"
      >
        Seat
      </div>
      <div
        className="eouheV"
        size="small"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="eocvtR"
    size="small"
  >
    <div>
      test
    </div>
  </div>
</div>
`;
